# discrete-analysis

./: CMakeLists.txt  README.md  compile_commands.json  make.sh
Apostolico-Giancarlo/: CMakeLists.txt  compile_commands.json  main  main.cpp  make.sh
Apostolico-Giancarlo/.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Apostolico-Giancarlo/.cache/clangd/index/: AGSearch.cpp.BAF70516CA315559.idx  AGSearch.hpp.F45C12CE50584A0A.idx  GoodSuffix.cpp.618D5FDA173A897B.idx  GoodSuffix.hpp.7CB955D1C51EBFF8.idx  LFunction.cpp.333795DA8674EDB2.idx  LFunction.hpp.9FC077AAB6832F8D.idx  LsFunction.cpp.8272098D168D9E5E.idx  LsFunction.hpp.ADC981E2CC6477CF.idx  NFunction.cpp.D637E6E5AF18FE81.idx  NFunction.hpp.C894B0DBB92A8B77.idx  ParsingUtils.cpp.B51D8713158C15B2.idx  SuccesfullShift.cpp.193969771CCC30BE.idx  SuccesfullShift.hpp.A52393CF5A8A1917.idx  SymbolTable.cpp.67BD925059139A7F.idx  SymbolTable.hpp.07C7E2D85B36D114.idx  ZFunction.cpp.AA5EA96D36EB366B.idx  ZFunction.hpp.D1B2145F0C0ABAAF.idx  main.cpp.E5D409B6F7DE5174.idx
Apostolico-Giancarlo/include/: AGSearch.hpp  GoodSuffix.hpp  NFunction.hpp  ParsingUtils.hpp  SuccesfullShift.hpp  SymbolTable.hpp  ZFunction.hpp
Apostolico-Giancarlo/src/: AGSearch.cpp  GoodSuffix.cpp  LFunction.cpp  LsFunction.cpp  NFunction.cpp  ParsingUtils.cpp  SuccesfullShift.cpp  SymbolTable.cpp  ZFunction.cpp
Boyer-Moore/: Apostolico-Giancarlo.cpp  CMakeLists.txt  compile_commands.json  input.txt  main  main.cpp  make.sh  trash.cpp
Boyer-Moore/.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Boyer-Moore/include/: LFunction.hpp  LsFunction.cpp  LsFunction.hpp  NFunction.hpp  ZFunction.hpp
Boyer-Moore/src/: GoodSuffix.cpp  LFunction.cpp  LsFunction.cpp  NFunction.cpp  RFunction.cpp  SymbolTable.cpp  ZFunction.cpp
Boyer-Moore/trash/: GoodSuffix.hpp  LFunction.cpp  LFunction.hpp  NFunction.hpp  RFunction.hpp  SymbolTable.hpp  ZFunction.cpp  input.txt  main  main.cpp  makefile
RadixSort/: CMakeLists.txt  main.cpp  make.sh
RadixSort/code/: compile_commands.json  lab1
RadixSort/code/.build/: CMakeCache.txt  Makefile  cmake_install.cmake
RadixSort/code/include/: Number.hpp
RadixSort/include/: RadixSort.hpp
RadixSort/report/: report.aux
RadixSort/report/src/: problem.tex
RadixSort/src/: RadixSort.cpp
RadixSort/trash/: LSD_alter.cpp  input.txt
RedBlackTree/: CMakeLists.txt  compile_commands.json  main.cpp  tests.cpp  trash.cpp
RedBlackTree/include/: FileManager.hpp  Formatter.hpp  Item.hpp  Node.hpp  RedBlackTree.hpp
RedBlackTree/src/: FileManager.cpp  Formatter.cpp  Item.cpp  Node.cpp  RedBlackTree.cpp
ZBlocks/: CMakeLists.txt  ZBlocks  compile_commands.json  main.cpp  make.sh
ZBlocks/.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ZBlocks/.cache/clangd/index/: ZFunction.cpp.E971431551FB4673.idx  main.cpp.2A5AB85BD8DFD42B.idx
ZBlocks/include/: ZFunction.hpp
ZBlocks/src/: ZFunction.cpp
contest/: BoyerMoore.cpp  Dynamic.cpp  FordFulkerson.cpp  RadixSort.cpp  RedBlackTree.cpp  Segments.cpp  SuffixTree.cpp  UglyFordFulkerson.cpp  input.txt  main  test.cpp
doc/Apostolico-Giancarlo/: report.aux
doc/Apostolico-Giancarlo/src/: banchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
doc/Dynamic/src/: problem.tex  src.tex  thinks.tex  titlepage.tex
doc/FordFulkerson/: report.aux  report.out  report.tex
doc/FordFulkerson/src/: banchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
doc/RadixSort/src/: banchmark.tex  src.tex  thinks.tex  titlepage.tex
doc/Segments/: report.aux  report.out
doc/Segments/src/: banchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
doc/SuffixTree/: report.aux
doc/SuffixTree/src/: banchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
tests/: AGTest.cpp  CMakeLists.txt  RBTreeTest.cpp
tests/include/: GenerationUtils.hpp
tests/src/: GenerationUtils.cpp
(+18 files in other folders)
